Changed git pathes to https

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,7 +15,7 @@
 
 - name: Checkout while-true-do/bash-prompt
   git:
-    repo: git://github.com/while-true-do/bash-prompt.git
+    repo: https://github.com/while-true-do/bash-prompt.git
     dest: "{{ wtd_deploy_directory }}/bash-prompt"
   when: bash_wtd_bash_prompt == 'true'
   notify: Install wtd-bash-prompt
@@ -26,7 +26,7 @@
 
 - name: Checkout while-true-do/bash-behaviour
   git:
-    repo: git://github.com/while-true-do/bash-behaviour.git
+    repo: https://github.com/while-true-do/bash-behaviour.git
     dest: "{{ wtd_deploy_directory }}/bash-behaviour"
   when: bash_wtd_bash_behaviour == 'true'
   notify: Install wtd-bash-behaviour
