Rework: Preparation for v1.0
- Add: .editorconfig and .gitignore
- Update: Readme now reflects the new standard
- Remove: git removed from the role; its obsolete
- Add: docs were added

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,4 @@
 ---
-# FIXME: Remove git task and require a role for git
-- name: Install git
-  package:
-    name: git
-    state: present
-  when: bash_install_git == 'true'
-  tags:
-    - git
-
 - name: Make deploy directory for while true do
   file:
     path: "{{ wtd_deploy_directory }}"
@@ -17,6 +8,7 @@
   git:
     repo: https://github.com/while-true-do/bash-prompt.git
     dest: "{{ wtd_deploy_directory }}/bash-prompt"
+    update: yes
   when: bash_wtd_bash_prompt == 'true'
   notify: Install wtd-bash-prompt
   tags:
@@ -28,6 +20,7 @@
   git:
     repo: https://github.com/while-true-do/bash-behaviour.git
     dest: "{{ wtd_deploy_directory }}/bash-behaviour"
+    update: yes
   when: bash_wtd_bash_behaviour == 'true'
   notify: Install wtd-bash-behaviour
   tags:
