Add: better testing implemented

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,4 +31,8 @@ script:
   - tests/test.sh
 
 notifications:
-  webhooks: https://galaxy.ansible.com/api/v1/notifications/
+  webhooks:
+    urls:
+      - https://galaxy.ansible.com/api/v1/notifications/
+    on_success: always
+    on_failure: never
